# china_chess

./: README.md
chess/chess/: CMakeLists.txt  CMakeUserPresets.json  board_control.cpp  board_control.h  board_control.ui  chessbase.cpp  chessbase.h  chessboard.cpp  chessboard.h  chessboardui.cpp  chessboardui.h  chessfactory.cpp  chessfactory.h  config.json  custom_widget.cpp  custom_widget.h  friend_item.cpp  friend_item.h  friend_item.ui  friend_list.cpp  friend_list.h  friend_list.ui  global.h  http.cpp  http.h  json.md  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  new_chess_board_ui.cpp  new_chess_board_ui.h  picture.qrc  progress_design.md  register_dialog.cpp  register_dialog.h  register_dialog.ui  (+11 more)
chess/chess/style/: ui.qss
chess/server/gate_server/gate_server/: AsioIOServicePool.h  CMakeLists.txt  CMakePresets.json  HttpConnection.cpp  HttpConnection.h  HttpServer.cpp  HttpServer.h  SingleClass.h  config.ini  email.cpp  email.h  gate_server.cpp  gate_server.h  global.cpp  global.h  logic.cpp  logic.h  mysql.cpp  mysql.h
chess/server/tcp_server/: AsioIOServicePool.cpp  AsioIOServicePool.h  CMakeLists.txt  CMakePresets.json  SingleClass.h  battle.cpp  battle.h  config.ini  global.cpp  global.h  logic.cpp  logic.h  mysql.cpp  mysql.h  tcp_acceptor.cpp  tcp_acceptor.h  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h  thread.pool.cpp  thread_pool.h  user.cpp  user.h
